Log in with google

--- a/styles/style-cart.css
+++ b/styles/style-cart.css
@@ -36,6 +36,7 @@
     height: 200px;
     border-radius: 30px;
     border-bottom-left-radius: 0;
+    object-fit: cover;
 }
 
 .container-img{
@@ -68,6 +69,19 @@
     height: 100%;
     display: grid;
     place-items: center;
+    animation: pulse-animation 3s infinite;
+}
+
+@keyframes pulse-animation{
+    0% {
+        transform: scale(1); /* Dimensione normale */
+      }
+      50% {
+        transform: scale(1.05); /* Espansione */
+      }
+      100% {
+        transform: scale(1); /* Ritorno alla dimensione normale */
+      }
 }
 
 .timer-container p {
