--- a/styles/style-login.css
+++ b/styles/style-login.css
@@ -19,10 +19,7 @@ a {
     /* Centra il contenitore */
     width: 100%;
     /* Usa una larghezza relativa per adattarsi a diverse dimensioni di schermo */
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background: linear-gradient(#4680ebcf, #4680eb00, #4680eb00);
-    /* Leggero effetto ombra */
-    height: 100vh;
 }
 
 /* Sezione Header */
@@ -31,11 +28,10 @@ a {
     width: 100%;
     background: linear-gradient(#4680EB, #4680eb00, #4680eb00);
     display: flex;
-    align-items: center;
-    position: sticky;
+    align-items: center;;
     top: 0;
     z-index: 10;
-    /* Header sopra l'immagine */
+    padding: 20px 0 ;
 }
 
 /* Navbar */
@@ -174,7 +170,7 @@ nav .fa {
 .login-container{
     width: auto;
     margin: 2rem 25%;
-    padding: 2rem;
+    padding:2rem;
     background: linear-gradient(#4680EB,#74A0F0, #78A2F0, #8BB0F3, #A2BFF5);
     text-align: center;
     border-radius: 30px;
@@ -244,7 +240,7 @@ input[type="text"]:focus {
     margin: 0;
 }
 
-.remember-me h1 {
+.remember-me label{
     all: unset;
     color: white;
     font-size: 18px; /* Mantiene proporzioni con il resto del testo */
@@ -485,3 +481,19 @@ input[type="text"]:focus {
     width: 100%; /* Occupa tutta la larghezza disponibile */
     box-sizing: border-box; /* Include padding nel calcolo della larghezza */
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
