push spaso gianpiero skabar

--- a/styles/style-index.css
+++ b/styles/style-index.css
@@ -681,7 +681,7 @@ nav .fa {
         margin-bottom: 100px;
     }
     
-    .concerti-container,
+    .concerto-container,
     .teatro-container,
     .tour-container,
     .partite-container {
